
        - Corrected a but that cause line like ``:: comment & command'' to 
          execute the command COMMAND, unlike CMD.EXE's behaviour.

        - Added REM command and comments manual page.

        - Fixed broken make that did not build DUMP command.

        - Added endianness support to DUMP command.

        - Behaviour of DOS9 is now the same as CMD.EXE's one towards block.

        - Fixed a bug that required both @ and : signs to be at first column.

        - Fixed a bug that prevented redirection to be executed in a top-level 
          block.

        - Added copyright notice to all manual pages.

        - Fixed a bug with an added extra space with redirection placed at end 
          of input line.

THURSDAY 23TH, JUNUARY

        - Fixed a bug with the TITLE command. The TITLE command set a title 
          that was the whole command line (including TITLE statement).

        - Fixed a bug with the FILELIST features. It now works as expected 
          with both '/' (filesystem root sign) and '[driveletter]:/' with 
          windows.

FRIDAY 24TH, JUNUARY

        - Started working on an enhanced version of TEA text preprocessor.

SATURDAY 1ST, FEBRUARY

        - Final version of TEAV2. Added support for both HTML 5, HTML 4.01 and 
          XHTML. Others formats have been dropped.

        - Fixed a bug with the parsing of command line parameter. If, the 
          final parameter was enclosed in quotes (simple or double), it 
          resulted in undefined behaviour.

        - Fixed a bug that prevented user from include pipes in FOR /F command 
          input.

        - Enhanced pipe features.

        - Fixed a bug that caused the following message

             Error : Unable to release mutex

          to be printed at exit, due to an undefined behavior with ATEXIT() 
          function.

FRIDAY 7TH, FEBRUARY

        - fixed a bug of SET /P subcommand. The bug caused a SEGFAULT to be 
          raised on execution.
