@@ -301,3 +301,8 @@ ${IF 1==1 (
 	returned the shortest match available instead of the largest available one.
 	
 	- Added an error message if the {SET} command is unable to set environment variable.
+	
+{{Wednesday 12th, February}}
+
+	- Fixed a bug of {SET /P} subcommand, that didn't not removed the carriage return at the
+	end of the input.
